--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,10 @@ dependencies:
   flutter_easyloading: ^3.0.5
   get: ^4.6.5
   fluttertoast: ^8.2.8
+  get_it: ^8.0.3
   flutter_svg: ^2.0.16
+  either_dart: ^1.0.0
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
