--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   get_it: ^8.0.3
   flutter_svg: ^2.0.16
   either_dart: ^1.0.0
+  shimmer: ^3.0.0
+  lottie: ^3.1.3
   flutter_bloc: ^8.1.3
 
 dev_dependencies:
@@ -72,6 +74,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/animation/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
