--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,13 +39,14 @@ dependencies:
   dio: ^5.7.0
   pretty_dio_logger: ^1.4.0
   flutter_screenutil: ^5.9.3
-  flutter_easyloading: ^3.0.5
   get: ^4.6.5
   fluttertoast: ^8.2.8
   get_it: ^8.0.3
   flutter_svg: ^2.0.16
   either_dart: ^1.0.0
   flutter_bloc: ^8.1.3
+  flutter_easyloading: ^3.0.5
+  flutter_otp_text_field: ^1.5.1+1
 
 dev_dependencies:
   flutter_test:
