--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   dio: ^5.7.0
   pretty_dio_logger: ^1.4.0
   flutter_screenutil: ^5.9.3
+  signalr_netcore: ^1.4.3
   flutter_easyloading: ^3.0.5
   get: ^4.6.5
   fluttertoast: ^8.2.8
