--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   image_picker: ^1.1.2
   flutter_otp_text_field: ^1.5.1+1
   intl: ^0.20.2
+  emoji_picker_flutter: ^4.3.0
   connectivity_plus: ^6.1.4
 dev_dependencies:
   flutter_test:
