--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,11 +57,18 @@ dependencies:
   path_provider: ^2.1.5
   path: ^1.9.0
   device_info_plus: ^9.1.0
-
+  flutter_local_notifications: ^17.2.2
+  audioplayers: ^6.0.0
+    # إذا كنت تريد إشعارات في الخلفية (اختياري)
+  firebase_messaging: ^15.2.6
+  firebase_core: ^3.13.1
+  flutter_launcher_icons: ^0.14.3
   permission_handler: ^11.3.1
   image_gallery_saver: ^2.0.3
   connectivity_plus: ^6.1.4
 dev_dependencies:
+
+
   flutter_test:
     sdk: flutter
 
@@ -72,11 +79,19 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
 
+flutter_launcher_icons:
+    android: "launcher_icon"
+    ios: true
+    image_path: "assets/images/logo.jpg"
+    min_sdk_android: 21
+
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
+
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
