--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
+
 }
 
 def localProperties = new Properties()
@@ -52,6 +53,8 @@ android {
 
     buildTypes {
         release {
+//            minifyEnabled false
+//            shrinkResources false
             signingConfig = signingConfigs.debug
         }
     }
