--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,30 +1,41 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.rommify_app">
+    <uses-permission android:name="android.permission.USE_BIOMETRIC"/>
+    <uses-permission android:name="android.permission.USE_FINGERPRINT"/>
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-    <!-- صلاحيات الإنترنت -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
-
-    <!-- For Android 13+ (API 33+) -->
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-
-    <!-- Internet permission for downloading -->
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-
         android:requestLegacyExternalStorage="true"
-        android:label="roomify_app"
+        android:networkSecurityConfig="@xml/network_security_config"
+
+        android:label="roomify"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
-        <receiver android:name="com.dexterous.flutterlocalnotifications.FlutterLocalNotificationsPlugin" android:exported="false"/>
+        android:icon="@mipmap/launcher_icon">
+
+        <!-- إذا كنت لا تستخدم جدولة إشعارات أو إعادة الجدولة بعد الإقلاع، يمكنك إزالة القسم التالي بالكامل -->
+        <!-- Scheduled notifications support -->
+        <receiver
+            android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationReceiver"
+            android:exported="false"/>
+        <!-- To reschedule after reboot or app update -->
+        <receiver
+            android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationBootReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.MY_PACKAGE_REPLACED"/>
+            </intent-filter>
+        </receiver>
 
         <activity
             android:name=".MainActivity"
@@ -48,10 +59,6 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            <meta-data
-                android:name="io.flutter.embedding.android.NormalTheme"
-                android:resource="@style/NormalTheme"
-                />
         </activity>
 
         <meta-data
@@ -60,7 +67,6 @@
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="notification_channel" />
-
         <meta-data
             android:name="flutter_deeplinking_enabled"
             android:value="true" />
