--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,7 +65,8 @@ dependencies:
   firebase_core: ^3.13.1
   flutter_launcher_icons: ^0.14.3
   permission_handler: ^11.3.1
-  image_gallery_saver: ^2.0.3
+  image_gallery_saver:
+    path: local_packages/image_gallery_saver
   connectivity_plus: ^6.1.4
 dev_dependencies:
 
