--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,10 @@ dependencies:
   path: ^1.9.0
   device_info_plus: ^9.1.0
   flutter_local_notifications: ^17.2.2
+  cloud_firestore: ^5.6.8
+  http: ^1.4.0
+  googleapis_auth: ^1.4.1
+
   audioplayers: ^6.0.0
     # إذا كنت تريد إشعارات في الخلفية (اختياري)
   firebase_messaging: ^15.2.6
