--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 .history
 .svn/
 migrate_working_dir/
-lib/core/helpers/firebase_information
+lib/core/helpers/firebase_information.dart
 
 # IntelliJ related
 *.iml
