--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   intl: ^0.20.2
   emoji_picker_flutter: ^4.3.0
   path_provider: ^2.1.5
+  font_awesome_flutter: ^10.4.0
+#  image_downloader: ^0.31.0
   path: ^1.9.0
   device_info_plus: ^9.1.0
   flutter_local_notifications: ^17.2.2
