--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,10 +53,11 @@ dependencies:
   cached_network_image: ^3.4.1
   image_picker: ^1.1.2
   flutter_otp_text_field: ^1.5.1+1
-  intl: ^0.20.2
+  intl: ^0.19.0
   emoji_picker_flutter: ^4.3.0
   path_provider: ^2.1.5
   font_awesome_flutter: ^10.4.0
+  easy_localization: ^3.0.3
 #  image_downloader: ^0.31.0
   path: ^1.9.0
   device_info_plus: ^9.1.0
@@ -110,6 +111,7 @@ flutter:
   assets:
     - assets/images/
     - assets/animation/
+    - assets/translations/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
